--- a/bootcamps3.yml
+++ b/bootcamps3.yml
@@ -1,19 +1,19 @@
 server:
-  port: '8087'
+  port: 8087
 management:
   endpoints:
     web:
       exposure:
-        include: '*'
+        include: *
 spring:
   thymeleaf:
-    cache: 'true'
+    cache: true
   jpa:
     properties:
       hibernate:
         jdbc:
-          batch_size: '50'
-    show-sql: 'true'
+          batch_size: 50
+    show-sql: true
     hibernate:
       ddl-auto: update
   jackson:
