--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,20 @@
-spring.application.name=bootcamps3
+server.port=8087
 
+user.backend=administrator
+user.aplicationName=bootCamp50S3
 
-spring.config.import=optional:configserver:http://localhost:8889
-spring.cloud.config.username=oliveros
-spring.cloud.config.password=H@liveros
+user.endpoints1=http://localhost:8085
+
+management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=health,beans,loggers
+
+spring.thymeleaf.cache=true
+spring.jackson.serialization.INDENT_OUTPUT = true
+spring.jackson.serialization.write-dates-as-timestamps=false
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.batch_size = 50
+
+spring.data.mongodb.uri=mongodb://192.168.18.59:27017/collection?retryWrites=true&w=majority
+spring.data.mongodb.database=local
