--- a/bootcamps3.properties
+++ b/bootcamps3.properties
@@ -5,7 +5,7 @@ user.aplicationName=bootCamp50S3
 
 user.endpoints1=http://localhost:8085
 
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include='*'
 #management.endpoints.web.exposure.include=health,beans,loggers
 
 spring.thymeleaf.cache=true
