--- a/bootcamps2.properties
+++ b/bootcamps2.properties
@@ -1,4 +1,4 @@
-server.port=8086
+server.port=${port:0}
 
 user.backend=administrator
 user.aplicationName=bootCamp50S3
@@ -18,3 +18,8 @@ spring.jpa.properties.hibernate.jdbc.batch_size = 50
 
 spring.data.mongodb.uri=mongodb://192.168.18.59:27017/collection?retryWrites=true&w=majority
 spring.data.mongodb.database=local
+
+
+eureka.client.service-url.defaultZone=http://192.168.18.59:8761/eureka/
+eureka.instance.hostname=192.168.18.59
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
