--- a/gateway-server.yaml
+++ b/gateway-server.yaml
@@ -20,6 +20,7 @@ spring:
           uri: lb://BOOTCAMPS3
           predicates:
             - Path=/funciones/api/v1/**
+            - Body=param
           filters:
             - StripPrefix=1
 
