--- a/gateway-server.yaml
+++ b/gateway-server.yaml
@@ -20,7 +20,7 @@ spring:
           uri: lb://BOOTCAMPS3
           predicates:
             - Path=/funciones/api/v1/**
-            - RequestBody=param
+            - Query=param
           filters:
             - StripPrefix=1
 
