--- a/bootcamps3.properties
+++ b/bootcamps3.properties
@@ -5,8 +5,7 @@ user.aplicationName=bootCamp50S3
 
 user.endpoints1=http://localhost:8085
 
-#management.endpoints.web.exposure.include='*'
-#management.endpoints.web.exposure.include=health,beans,loggers
+management.endpoints.web.exposure.include=info,health,beans,loggers
 
 spring.thymeleaf.cache=true
 spring.jackson.serialization.INDENT_OUTPUT = true
@@ -22,3 +21,5 @@ spring.data.mongodb.database=local
 eureka.client.service-url.defaultZone=http://192.168.18.59:8761/eureka/
 eureka.instance.hostname=192.168.18.60
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+
