--- a/bootcamps3.properties
+++ b/bootcamps3.properties
@@ -23,3 +23,4 @@ eureka.instance.hostname=192.168.18.60
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 
+webflux.base-path=${SERVER_SERVLET_CONTEXT_PATH:/api/v1/shop}
