--- a/bootcamps1.properties
+++ b/bootcamps1.properties
@@ -3,8 +3,7 @@ server.port=${port:0}
 user.backend=administrator
 user.aplicationName=bootCamp50S1
 
-management.endpoints.web.exposure.include=*
-#management.endpoints.web.exposure.include=health,beans,loggers
+management.endpoints.web.exposure.include=info,health,beans,loggers
 
 spring.thymeleaf.cache=true
 spring.jackson.serialization.INDENT_OUTPUT = true
