--- a/bootcamps2.properties
+++ b/bootcamps2.properties
@@ -5,8 +5,7 @@ user.aplicationName=bootCamp50S2
 
 user.endpoints1=http://localhost:8085
 
-#management.endpoints.web.exposure.include='*'
-#management.endpoints.web.exposure.include=health,beans,loggers
+management.endpoints.web.exposure.include=info,health,beans,loggers
 
 spring.thymeleaf.cache=true
 spring.jackson.serialization.INDENT_OUTPUT = true
