--- a/bootcamps4.properties
+++ b/bootcamps4.properties
@@ -1,12 +1,11 @@
-server.port=8088
+server.port=${port:0}
 
 user.backend=administrator
 user.aplicationName=bootCamp50S3
 
 user.endpoints1=http://localhost:8085
 
-#management.endpoints.web.exposure.include='*'
-#management.endpoints.web.exposure.include=health,beans,loggers
+management.endpoints.web.exposure.include=health,beans,loggers
 
 spring.thymeleaf.cache=true
 spring.jackson.serialization.INDENT_OUTPUT = true
