--- a/bootcamps4.properties
+++ b/bootcamps4.properties
@@ -18,4 +18,6 @@ spring.jpa.properties.hibernate.jdbc.batch_size = 50
 spring.data.mongodb.uri=mongodb://192.168.18.59:27017/collection?retryWrites=true&w=majority
 spring.data.mongodb.database=local
 
-
+eureka.client.service-url.defaultZone=http://192.168.18.59:8761/eureka/
+eureka.instance.hostname=192.168.18.60
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
